debuged nav bar links, drop menu and fixed alignements in hero

--- a/indexstyles.css
+++ b/indexstyles.css
@@ -11,7 +11,7 @@
 
 
 .hero{
-    height: 762px;
+    height: 100vh;
     background-color: black;
 }
 
