--- a/navstyle.css
+++ b/navstyle.css
@@ -33,6 +33,7 @@ nav h1 {
     cursor:default;
 }
 nav .links li{
+    position:relative;
     display:inline-block;
     font-size:20px;
     font-family: 'Montserrat', sans-serif;
@@ -49,13 +50,11 @@ nav .links li:hover{
     border-color:#f2f2f2;
     background-color: #03057c;
 }
-nav ul{
-    float:right;
-    padding-right:20px;
+nav .links {
+    padding-right:10px;
     color:white;
-    margin-top:15px;
-    margin-right:10px;
-    
+    padding-top:13px;
+    float:right;
 }
 .dropdown {
     display:inline-block;
@@ -87,6 +86,8 @@ nav ul{
     background-color: #03057c;
 }
 .content a{
+    width:100%;
+    height:fit-content;
     display:block;
     padding:5px;
     color:black;
@@ -110,8 +111,10 @@ nav ul{
     
 }
 .media ul {
+    padding-left:20px;;
+    float:right;
     width:fit-content;
-    margin-top:20px;
+    margin-top:10px;
     margin-right:30px;
 }
 
@@ -185,18 +188,17 @@ form {
     transition:transform 800ms, background-color 800ms ease-in-out;
   }
   form:hover{
-    transform: scale(130%);
+    transform: scale(110%);
     color: black;
     background-color:rgba(255, 255, 255,0.7);
   }
 
 
   .explore{
-      position: relative;
-      font-size: 50px;
-      left: 650px;
+      
+      font-size: 30px;
       height: fit-content;
-      align-self: center;
+      position:relative;
       background-color: white;
       padding: 10px;
       background-size: cover;
@@ -207,13 +209,15 @@ form {
       font-weight: 700;
       transition: 1s;
       transform: scale(100%);
+      display:block;
+      border-radius:10px;
   }
 
   .explore:hover{
-      background-color: rgb(117, 117, 255);
+      background-color: rgb(68, 68, 250);
       box-shadow: 0px 0px 108px #826ef5;
       color: rgb(255, 255, 255);
-      font-size: 60px;
+      font-size: 45px;
   }
 
   input {
@@ -238,8 +242,8 @@ form {
   svg {
     color: #fff;
     fill: currentColor;
-    width: 24px;
-    height: 24px;
+    width: 50px;
+    height: 50px;
     padding: 10px;
   }
 .app img {
@@ -248,7 +252,6 @@ form {
     background-size: cover;
 }
 .app h4{
-    font-size:20px;
     color:white;
     font-family: 'Montserrat', sans-serif;
     font-size:15px;
@@ -256,7 +259,6 @@ form {
     padding-bottom:20px;
 }
 .app {
-    display:block;
     float:right;
     margin-right:30px;
 }
