--- a/universal.css
+++ b/universal.css
@@ -23,7 +23,7 @@
 
   html{
     scroll-behavior: smooth;
-    cursor: none;
+    /*cursor: none;*/
   }
 
   
